# antropy

./: LICENSE  pyproject.toml
kaos/: entropy.py  fractal.py  utils.py
kaos/stochastic/processes/: __init__.py  base.py
kaos/stochastic/processes/continuous/: __init__.py  bessel.py  brownian_bridge.py  brownian_excursion.py  brownian_meander.py  brownian_motion.py  cauchy.py  fractional_brownian_motion.py  gamma.py  geometric_brownian_motion.py  inverse_gaussian.py  mixed_poisson.py  multifractional_brownian_motion.py  poisson.py  squared_bessel.py  variance_gamma.py  wiener.py
kaos/stochastic/processes/diffusion/: __init__.py  constant_elasticity_variance.py  cox_ingersoll_ross.py  diffusion.py  extended_vasicek.py  ornstein_uhlenbeck.py  vasicek.py
kaos/stochastic/processes/discrete/: __init__.py  bernoulli.py  chinese_restaurant.py  dirichlet.py  markov_chain.py  moran.py  random_walk.py
kaos/stochastic/processes/noise/: __init__.py  colored_noise.py  fractional_gaussian_noise.py  gaussian_noise.py
kaos/stochastic/tests/processes/base/: test_base.py
kaos/stochastic/tests/processes/continuous/: test_bessel.py  test_brownian_bridge.py  test_brownian_excursion.py  test_brownian_meander.py  test_brownian_motion.py  test_cauchy.py  test_fractional_brownian_motion.py  test_gamma.py  test_geometric_brownian_motion.py  test_inverse_gaussian.py  test_mixed_poisson.py  test_multifractional_brownian_motion.py  (+4 more)
kaos/stochastic/tests/random/: test_random.py
kaos/stochastic/tests/utils/: test_utils.py  test_validation.py
kaos/tests/: test_entropy.py  test_fractal.py
(+15 files in other folders)
