[project]
name        = "kaos"
version     = "0.0.1"
license     = { file = "LICENSE" }

authors     = [
    { name = "Raphael Vallat"},
    { name = "Christopher Flynn"},
    { name = "Michael St. Clair"},

]

requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "numba",
]
[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kaos*"]
namespaces = false

# Recommended for new projects by pytest manual.
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
